# indian_news_analysis_ETL

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.tmp_dagster_home_3glg3okr/history/: runs.db
.tmp_dagster_home_3glg3okr/history/runs/: 7bcc87d2-9377-4b54-b2d1-2d50e8e497be.db  7bcc87d2-9377-4b54-b2d1-2d50e8e497be.db-shm  index.db
.tmp_dagster_home_3glg3okr/schedules/: schedules.db
.tmp_dagster_home_lojs48yw/history/: runs.db
.tmp_dagster_home_lojs48yw/history/runs/: a46e413d-cf42-4ea9-a42e-a8cdd14371fc.db  index.db  index.db-shm
.tmp_dagster_home_lojs48yw/schedules/: schedules.db
etl_script/: etl.py
news_etl_analytics/: assets.py  definitions.py
postgres_data/: postmaster.pid
postgres_data/base/1/: 1247  1249  1259  1259_vm  13463_vm  13468  13468_vm  13473  2601_vm  2603_vm  2606_vm  2607_vm  2608  2608_vm  2610  2615  2615_vm  2617_vm  2619  2619_vm  2658  2659  2674  2678  2679  2696  2836  2840  2840_vm  2841  3394  3456_vm  3603_vm  3764
postgres_data/base/4/: 1247_vm  1249_vm  1255  1259  13463  13478_vm  2606  2610_vm  2612  2616_vm  2618_vm  2619  2619_vm  2662  2663  2673  2690  2696  2753_vm  2838  2838_vm  2840  2840_vm  2841  3079  3079_vm  3455  3541_vm  3600  3601_vm  3602_vm  3764_vm
postgres_data/base/5/: 1247  1247_vm  1249  1249_vm  1255_vm  1259  1259_vm  13478  2224  24632  24632_fsm  24632_vm  24635  24636  24645  24645_fsm  24645_vm  24648  2579  (+49 more)
postgres_data/global/: 1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2397  2671  2672  pg_control  pg_internal.init
postgres_data/pg_xact/: 0000
(+11 files in other folders)
