[project]
name = "news_etl_analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "news_etl_analytics.definitions"
code_location_name = "news_etl_analytics"

[tool.setuptools.packages.find]
exclude=["news_etl_analytics_tests"]
